# scribb

./: .gitignore  LICENSE  pyproject.toml
altair/: altair.ipynb
file_io/: glob.ipynb  path_join.ipynb  pathlib.ipynb
file_io/scripts/: get_script_loc.py
huggingface/: General Usage Tips.md  Getting Started.md  huggingface.py
links/: Books and Courses.md  Courses.md  LLMs.md  Links.md  Python Packages.md  Textbooks.md  llm_prompts.ipynb
lists/: appending.ipynb  sorting.ipynb
pandas/: EDA.ipynb  File IO.ipynb  Merge and Concat.ipynb  dates.ipynb  missing_values.ipynb  tabilize.ipynb
pandas/dates/: Conversion.ipynb  datetimes.ipynb  freq aliases.ipynb  periods.ipynb
pandas/dfs/: Assignment.ipynb  Creation.ipynb  Mutation.ipynb  Selection.ipynb
pandas/index/: index.ipynb
pandas/pandas_dfs/: Creation.ipynb  Selection.ipynb  creation.ipynb
pandas/pandas_series/: Creation.ipynb
pandas/periods_and_datetimes/: indices.ipynb  periods.ipynb
pandas/series/: Creation.ipynb  Iterating.ipynb  Mutation.ipynb  Selection.ipynb
pandas_series/: creation.ipynb
prompts/: Coding.ipynb
pydantic/: 0_Intro.ipynb
python/: Installation.ipynb  Iterables and Iterators.ipynb  Modules and Scripts.ipynb  Packages.md  datetimes.ipynb  functions.ipynb  pip.md  warnings.md
python/dicts/: dicts.ipynb
standards/: Best Practices.ipynb  checking_empty.ipynb
statsmodels/: NW Standard Errors.ipynb
time series/: SSMs.md
utilities/: ChatGPT.md  Github Copilot.ipynb  Linux.ipynb  dotenv.ipynb  jupyter_notebooks.ipynb  markdown.md  pip.ipynb  pytest.md  uv.ipynb
(+7 files in other folders)
